--- a/AndroidFrontEnd/res/layout/loginactivity.xml
+++ b/AndroidFrontEnd/res/layout/loginactivity.xml
@@ -8,5 +8,12 @@
     <ScrollView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:id="@+id/scrollView"/>
+            android:id="@+id/scrollView">
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:id="@+id/scroll_layout">
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
