--- a/www/htdocs/stylesheets/style.css
+++ b/www/htdocs/stylesheets/style.css
@@ -30,6 +30,28 @@ p {
 	margin-bottom:1em;
 }
 
+.input-group-upload input[readonly]{
+	background:white;
+}
+.btn-file {
+	position: relative;
+	overflow: hidden;
+}
+.btn-file input[type=file] {
+	position: absolute;
+	top: 0;
+	right: 0;
+	min-width: 100%;
+	min-height: 100%;
+	font-size: 999px;
+	text-align: right;
+	filter: alpha(opacity=0);
+	opacity: 0;
+	background: red;
+	cursor: inherit;
+	display: block;
+}
+
 body {
 
 }
